- Tuning of the internal buffer code for feeder mode to minimize its performance impact (works in 4K blocks now).
- Workaround for compiler bugs in Open64/PathScale/SunStudio (bug 3004396, suggestion by Doug Gilmore).
- Make mpg123_getformat() return more error codes (like MPG123_NEED_MORE).

1.12.1
---

- Update INSTALL for the dual-mode library. No code changes.

1.12.0
---

Attention: This reverts the big bad libray name change. People did not like libmpg123_64.so at all ... so Thomas went along with proving that being responsible for a open source library package sucks for your life -- he coded large file dual-mode into libmpg123. One library with both APIs, like glibc.

- libmpg123 25.0.25:
  - The separate libraries are gone again, this one is dual-mode (using ca. 750 lines of not very funny code).
  - The library even translates callbacks between large file support modes.
  - Introduce handle-based custom I/O in libmpg123.
  - The header now defines MPG123_API_VERSION to help compile-time detection of available functions (lib is version 25.0.25 now... MPG123_API_VERSION is 25).
- Make the usage of AI_ADDRCONFIG dependend on a configure check. This flag is not available everywhere.


1.11.0
---

Attention: There was a re-release of the source archive, because the initial one missed the actual changes for the library name.
Sorry for the inconvenience:-/

- Big bad libray name change for builds with enabled large file support.
  That will break libmpg123 binary compatibility on Linux/x86 when upgrading from mpg123>=1.5.0 with enabled large file support. You need to relink with the new library called libmpg123_64.
  If you do not enable large file support, or it is implicit on your platform (x86-64), the library keeps the old name of libmpg123 and everything is fine.
- Assembler cleanup:
  - no use of compiler-based stack alignment (for SSE), helping portability